Se agrega sonido a la notificación